# Swarm-Robotics-ROS2

./: README.md  archivo_pesos_1_1.txt  archivo_pesos_2_1.txt  archivo_pesos_3_1.txt
arlo_interfaces/: CMakeLists.txt  README.md
arlo_interfaces/msg/: EstadoArlo.msg
arlo_interfaces/srv/: GetMatesFitness.srv  (+1 more)
cognitive_architecture/: CMakeLists.txt  README.md
cognitive_architecture/include/cognitive_architecture/: README.md  miscelaneo.h  miscelaneo.hpp  robot.h  robot.hpp
cognitive_architecture/include/cognitive_architecture/Algoritmo_Evolutivo/: Estadisticas.h  Estadisticas.hpp  GeneticoSimple.h  GeneticoSimple.hpp  Individuo.h  Individuo.hpp  ProblemaOptim.h  ProblemaOptim.hpp  RobotNaviFun.h  RobotNaviFun.hpp
cognitive_architecture/include/cognitive_architecture/Red_Neuronal/: NeuroControllerDriver.h  NeuroControllerDriver.hpp
cognitive_architecture/include/cognitive_architecture/control_simulacion/: SimulationState.h  SimulationState.hpp  srvED_Multiple_Goals.h  srvED_Multiple_Goals.hpp  srvED_Team_Movement.h  srvED_Team_Movement.hpp  srvEvaluateDriver.h  srvEvaluateDriver.hpp
cognitive_architecture/include/cognitive_architecture/modulos_cerebrales/: AreaMotoraSupProp.h  AreaMotoraSupProp.hpp  SistemaLimbico.h  SistemaLimbico.hpp  areaMotoraPre.h  areaMotoraPre.hpp  corteza_motora_secundaria.h  corteza_motora_secundaria.hpp  corteza_prefrontal.h  corteza_prefrontal.hpp  corteza_premotora.h  corteza_premotora.hpp  talamo.h  talamo.hpp
cognitive_architecture/models/arlo/: arlourdf.urdf  model.sdf  prueba.urdf
cognitive_architecture/models/cerebral_carpet/meshes/: diana.blend
cognitive_architecture/models/cerebral_goal/: model.config
cognitive_architecture/models/curling_target/: model.config
cognitive_architecture/scripts/: Controlador_individuo.py
cognitive_architecture/src/: controlador_meta.cpp
cognitive_architecture/worlds/: arena_cerebral.world  basic_house_obstacles.world.xml  curling_obstaculo.world.xml  escenarioAustero.world.docx  escenarioAusteroCalvos.world.docx  pista_herradura.world  pista_herradura_cerebral.world
install/: local_setup.sh  setup.sh
log/: latest_build
(+130 files in other folders)
